# cpp_redis

./: .travis.yml  BUILD.bazel  CMakeLists.txt  WORKSPACE  repositories.bzl
examples/: cpp_redis_client.cpp  cpp_redis_future_client.cpp  cpp_redis_high_availability_client.cpp  cpp_redis_kill.cpp  cpp_redis_multi_exec.cpp  cpp_redis_subscriber.cpp
scripts/: install-cmake.sh
sources/core/: client.cpp  reply.cpp
